--- a/angular.json
+++ b/angular.json
@@ -11,7 +11,7 @@
                 }
             },
             "root": "",
-            "sourceRoot": "public",
+            "sourceRoot": "src",
             "prefix": "app",
             "architect": {
                 "build": {
@@ -54,14 +54,14 @@
                             "extractLicenses": false,
                             "sourceMap": true,
                             "fileReplacements": [{
-                                "replace": "public/environments/environment.ts",
-                                "with": "public/environments/environment.development.ts"
+                                "replace": "src/environments/environment.ts",
+                                "with": "src/environments/environment.development.ts"
                             }]
                         },
                         "staging": {
                             "fileReplacements": [{
-                                "replace": "public/environments/environment.ts",
-                                "with": "public/environments/environment.staging.ts"
+                                "replace": "src/environments/environment.ts",
+                                "with": "src/environments/environment.staging.ts"
                             }]
                         }
                     },
