--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@angular/platform-browser": "^19.0.0",
         "@angular/platform-browser-dynamic": "^19.0.0",
         "@angular/router": "^19.0.0",
+        "@fontsource/noto-sans": "^5.2.7",
         "@primeng/themes": "^19.0.6",
         "bootstrap-icons": "^1.13.1",
         "chart.js": "4.4.2",
