--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
                         "inlineStyleLanguage": "scss",
                         "assets": [{
                             "glob": "**/*",
-                            "input": "public"
+                            "input": "public",
+                            "output": "/"
                         }],
                         "styles": [
                             "src/styles.scss"
