--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@sentry/angular": "^9.41.0",
         "bootstrap-icons": "^1.13.1",
         "chart.js": "4.4.2",
+        "ngx-print": "^20.0.0",
         "primeclt": "^0.1.5",
         "primeicons": "^7.0.0",
         "primeng": "^19.0.8",
