--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@fontsource/noto-sans": "^5.2.7",
         "@primeng/themes": "^19.0.6",
         "@sentry/angular": "^9.41.0",
+        "@tailwindcss/postcss": "^4.1.11",
         "bootstrap-icons": "^1.13.1",
         "chart.js": "4.4.2",
         "ngx-print": "^20.0.0",
@@ -30,7 +31,8 @@
         "primeng": "^19.0.8",
         "quill": "^2.0.3",
         "rxjs": "~7.8.0",
-        "tailwindcss-primeui": "^0.5.1",
+        "tailwindcss": "^4.1.11",
+        "tailwindcss-primeui": "^0.6.1",
         "tslib": "^2.3.0",
         "zone.js": "~0.15.0"
     },
@@ -51,9 +53,8 @@
         "karma-coverage": "~2.2.0",
         "karma-jasmine": "~5.1.0",
         "karma-jasmine-html-reporter": "~2.1.0",
-        "postcss": "^8.4.49",
+        "postcss": "^8.5.6",
         "prettier": "^3.0.0",
-        "tailwindcss": "^3.4.17",
         "typescript": "~5.6.2"
     }
 }
