--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "bootstrap-icons": "^1.13.1",
         "chart.js": "4.4.2",
         "ngx-print": "^20.0.0",
+        "ngx-spinner": "^19.0.0",
         "primeclt": "^0.1.5",
         "primeicons": "^7.0.0",
         "primeng": "^19.0.8",
