--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
         "@tailwindcss/postcss": "^4.1.11",
         "bootstrap-icons": "^1.13.1",
         "chart.js": "4.4.2",
+        "html2canvas": "^1.4.1",
+        "html2canvas-pro": "^1.5.12",
+        "jspdf": "^3.0.3",
         "ngx-print": "^20.0.0",
         "ngx-spinner": "^19.0.0",
         "primeclt": "^0.1.5",
