--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "tailwindcss": "^4.1.11",
         "tailwindcss-primeui": "^0.6.1",
         "tslib": "^2.3.0",
+        "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
         "zone.js": "~0.15.0"
     },
     "devDependencies": {
