--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@primeng/themes": "^19.0.6",
         "@sentry/angular": "^9.41.0",
         "@tailwindcss/postcss": "^4.1.11",
+        "angularx-qrcode": "^19.0.0",
         "bootstrap-icons": "^1.13.1",
         "chart.js": "4.4.2",
         "highcharts": "^12.4.0",
